# talk.io

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/backend/: main.py
src/backend/api/: auth.py  endpoints.py  logger.py  router.py  schema.py
src/backend/database/: connections.py  manager.py  utils.py
src/backend/database/models/: base.py  pfp.py  user.py
src/backend/database/operations/: user.py
src/backend/talk/: alembic.ini  main.py
src/backend/talk/alembic/versions/: 7cd0aff1eb93_make_last_login_nullable.py
src/backend/talk/api/: auth.py  endpoints.py  logger.py  router.py  schema.py
src/backend/talk/database/: connections.py  manager.py
src/backend/talk/database/models/: den.py  messages.py  pfp.py  user.py
src/backend/talk/database/operations/: user.py
src/backend/talk/services/database/: connections.py  manager.py
src/backend/talk/services/database/models/: __init__.py  den.py  group.py  group_user_link.py  groups.py  groupsusers.py  groupsuserslink.py  message.py  messages.py  pfp.py  user.py  user_message_link.py  users.py
src/backend/talk/services/database/operations/: user.py
